# samd21g-midi-tool-software

./: .gitignore  CMakeLists.txt  LICENSE  MainMenu.cpp  MainMenu.h  MidiSpyScene.cpp  MidiSpyScene.h  README.md  icons.cpp  icons.h  main.cpp  st7735view.h
.github/workflows/: linux.yml  teensy.yml
cmake/toolchains/: teensy41.cmake
resources/sd/: test10.mid  test11.mid  test12.mid  test13.mid  test14.mid  test15.mid  test16.mid  test17.mid  test18.mid  test20.mid  test21.mid  test22.mid  test23.mid  test24.mid  test25.mid  test26.mid  test27.mid  test28.mid  test29.mid  test6.mid  test7.mid  test9.mid
